src/objects/SBQQ__TemplateSection__c.object
<CustomObject>
    <fields>
        <fullName>ContentExternalId__c</fullName>
        <formula>SBQQ__Content__r.ExternalId__c</formula>
        <label>ContentExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TemplateExternalId__c</fullName>
        <formula>SBQQ__Template__r.ExternalId__c</formula>
        <label>TemplateExternalId</label>
        <type>Text</type>
    </fields>
</CustomObject>